# HW7-Regression

./: Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
regression/: logreg.py
test/: test_logreg.py
