[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[project]
name = "regression"
authors = [{name = "Isobel Beasley", email = "isobel.beasley@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.7"
dependencies = [
    "pytest", 
    "numpy", 
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[project.urls]
Home = "https://github.com/IJbeasley/HW7-Regression"